# debias-BERT

./: .env.template  .gitignore  Analyze_GLUE.ipynb  Analyze_Social_Bias_frames.ipynb  Analyze_crows_pairs.ipynb  Makefile  Model_Analyze.ipynb  README.md  args.json  args_gendered_sent.json  args_identity_phrase.json  args_social_bias_frames.json  args_train_model.json  args_wiki_toxicity.json  pyproject.toml  survey_american_jobs_statistics.ipynb
data/: attributes.txt  female_nouns.txt  male_nouns.txt  masking_names.txt  occupations.txt
data/ONET_DB/: alternate_titles.txt
experiments/: arguments.py  classifiers.py  constants.py  crows_metric.py  extract_entity_from_crows_pairs.py  identify_biased_subspace.py  indetify_biased_subspace.py  mixout.py  models.py  noise_reduction_pca.py  run_GAP.py  run_gendered_sent.py  run_glue.py  run_identity_phrase_toxicity.py  run_qa.py  run_social_bias_frames.py  run_wiki_toxicity.py  run_winobias.py  social_bias_frames.py  train_by_crows_pairs.py  train_model-checkpoint.py  train_model.py  trainers.py  utils.py
tasks/: build_train_data.py  build_train_sentences.py  build_wiki_sentences.py  crows_metric.py  gap_scorer.py  generate_masking_names.py  run_glue.py  stratified_split_crows_pairs.py  stratified_split_stereoset_for_train.py  transform_crows_pair_for_masking_names.py  transform_stereoset_for_crows_pair.py  transform_stereoset_for_train.py  transform_streoset_for_crows_pair.py  transform_winobias_for_crows_pair.py  transform_winobias_for_squad.py
(+16 files in other folders)
