[tool.poetry]
name = "debias-bert"
version = "0.1.0"
description = ""
authors = ["Takuro Niitsuma <bakednt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.0.2"
transformers = "^3.3.1"
comet_ml = "^3.2.2"
python-dotenv = "^0.14.0"
inflect = "^4.1.0"
tqdm = "^4.50.0"
tensorboard = "^2.3.0"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
python-language-server = "^0.35.1"
black = "^20.8b1"
pyls-black = "^0.4.6"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
